# nlg-guidance-sim

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
configs/: aircraft_presets.yaml  base.yaml  presets.yaml
scripts/: run_full_pipeline.py  run_scene.py
src/nlg_guidance_sim/: __init__.py
src/nlg_guidance_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nlg_guidance_sim/catalog/: __init__.py  presets.py  yaml_loader.py
src/nlg_guidance_sim/control/: __init__.py  phases.py  states.py
src/nlg_guidance_sim/estimation/: __init__.py  lshape.py  pose.py  pose_ekf.py  y_psi_solver.py
src/nlg_guidance_sim/fitting/: __init__.py  gauss_newton.py  lshape.py  optimizer.py  phases.py  pipeline.py  rdp.py  rectangle_model.py  segmentation.py
src/nlg_guidance_sim/geometry/: __init__.py  nlg_model.py  profiles.py
src/nlg_guidance_sim/phases/: __init__.py  state.py
src/nlg_guidance_sim/sensors/: __init__.py  rplidar2d.py
src/nlg_guidance_sim/viz/: __init__.py  fitting_plots.py  plot_scene.py  plotting.py
src/nlg_guidance_sim/world/: scene.py
tests/: test_estimation.py  test_fitting.py  test_fitting_pipeline.py  test_phases.py  test_smoke.py
