[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlg-guidance-sim"
version = "0.2.0"
description = "Simulador interactivo 2D para guiado y captura de tren delantero"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.36",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
